sas-core/main/default/objects/Settlement__c/Settlement__c.object-meta.xml
<CustomObject>
    <description>Settlement is a single payment to a customer about a specific claim, and a single claim can have several settlements made related to it.</description>
    <label>Settlement</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Settlement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>