sas-core/main/default/objects/Settlement__c/fields/Accounting_Status__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Status__c</fullName>
    <label>Accounting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for transfer</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>