sas-core/main/default/objects/Settlement__c/fields/Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_line_1__c</fullName>
    <label>Address line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>