sas-core/main/default/objects/Settlement__c/fields/Automatic_approval__c.field-meta.xml
<CustomField>
    <fullName>Automatic_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the settlement to be automatically approved after certain period of time</description>
    <label>Automatic approval</label>
    <type>Checkbox</type>
</CustomField>