sas-core/main/default/objects/Settlement__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Customer&apos;s Bank Account Number</description>
    <inlineHelpText>Bank account number that will receive the monetary payment</inlineHelpText>
    <label>Bank Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>