sas-core/main/default/objects/Settlement__c/fields/Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country__c</fullName>
    <label>Bank Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>