sas-core/main/default/objects/Settlement__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer&apos;s City</description>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>