sas-core/main/default/objects/Settlement__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Liability or Customer Claim</description>
    <inlineHelpText>This settlement is related to this Liability or Customer claim</inlineHelpText>
    <label>Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>