sas-core/main/default/objects/Settlement__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Legal firm that represents the customer</description>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>