sas-core/main/default/objects/Settlement__c/fields/Control_verified__c.field-meta.xml
<CustomField>
    <fullName>Control_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control verified</label>
    <type>Checkbox</type>
</CustomField>