sas-core/main/default/objects/Settlement__c/fields/Customer_Claim__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer claim is a single record of a customer claiming compensation, ticket refund or reimbursements of costs filed with SAS.</description>
    <label>Customer Claim</label>
    <referenceTo>Customer_Claim__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>