sas-core/main/default/objects/Settlement__c/fields/Date_of_Exchange_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exchange_Calculation__c</fullName>
    <label>Date of Exchange Calculation</label>
    <type>Date</type>
</CustomField>