sas-core/main/default/objects/Settlement__c/fields/Date_of_Last_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Approval_Date__c</fullName>
    <label>Date of Last Approval Date</label>
    <type>Date</type>
</CustomField>