sas-core/main/default/objects/Settlement__c/fields/Date_Time_sent_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_sent_to_Accounting__c</fullName>
    <label>Date/Time sent to Accounting</label>
    <type>DateTime</type>
</CustomField>