sas-core/main/default/objects/Settlement__c/fields/Date_Time_sent_to_Racer__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_sent_to_Racer__c</fullName>
    <label>Date/Time sent to Racer</label>
    <type>DateTime</type>
</CustomField>