sas-core/main/default/objects/Settlement__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>