sas-core/main/default/objects/Settlement__c/fields/EuroBonus_Number__c.field-meta.xml
<CustomField>
    <fullName>EuroBonus_Number__c</fullName>
    <label>EuroBonus Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>