sas-core/main/default/objects/Settlement__c/fields/EuroBonus_Points__c.field-meta.xml
<CustomField>
    <fullName>EuroBonus_Points__c</fullName>
    <label>EuroBonus Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>