sas-core/main/default/objects/Settlement__c/fields/Exchange_Rate_SEK_to_currency__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_SEK_to_currency__c</fullName>
    <label>Exchange Rate SEK to currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>