sas-core/main/default/objects/Settlement__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <description>Reference from payment system. For EuroBonus system the CLM transaction reference.</description>
    <externalId>true</externalId>
    <label>External Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>