sas-core/main/default/objects/Settlement__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>