sas-core/main/default/objects/Settlement__c/fields/IsEmergencyClaim__c.field-meta.xml
<CustomField>
    <fullName>IsEmergencyClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmergencyClaim</label>
    <type>Checkbox</type>
</CustomField>