sas-core/main/default/objects/Settlement__c/fields/Liability_Claim__c.field-meta.xml
<CustomField>
    <fullName>Liability_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Liability Claim</description>
    <label>Liability Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>