sas-core/main/default/objects/Settlement__c/fields/Manual_Control__c.field-meta.xml
<CustomField>
    <fullName>Manual_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Control</label>
    <type>Checkbox</type>
</CustomField>