sas-core/main/default/objects/Settlement__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>80</length>
    <type>Text</type>
</CustomField>