sas-core/main/default/objects/Settlement__c/fields/Needs_Control__c.field-meta.xml
<CustomField>
    <fullName>Needs_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Control</label>
    <type>Checkbox</type>
</CustomField>