sas-core/main/default/objects/Settlement__c/fields/Payee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Last_Name__c</fullName>
    <inlineHelpText>For vouchers, use only latin characters (A-Z).</inlineHelpText>
    <label>Payee Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>