sas-core/main/default/objects/Settlement__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <description>Beneficiary of the settlement</description>
    <label>Payee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>