sas-core/main/default/objects/Settlement__c/fields/Payee_reference__c.field-meta.xml
<CustomField>
    <fullName>Payee_reference__c</fullName>
    <description>Reference sent by the customer or legal firm</description>
    <label>Payee reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>