sas-core/main/default/objects/Settlement__c/fields/Payment_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_File_Name__c</fullName>
    <label>Payment File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>