sas-core/main/default/objects/Settlement__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>