sas-core/main/default/objects/Settlement__c/fields/Settlement_amount_in_SEK__c.field-meta.xml
<CustomField>
    <fullName>Settlement_amount_in_SEK__c</fullName>
    <description>Field for reporting purposes</description>
    <label>Settlement amount in SEK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>