sas-core/main/default/objects/Settlement__c/fields/Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Status__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
                <default>true</default>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Waiting for approval</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Waiting for control</fullName>
            </value>
            <value>
                <fullName>Waiting for transfer</fullName>
            </value>
            <value>
                <fullName>Sent to Racer</fullName>
            </value>
            <value>
                <fullName>Accepted by Racer</fullName>
            </value>
            <value>
                <fullName>Rejected by Racer</fullName>
            </value>
            <value>
                <fullName>Sent to Bank</fullName>
            </value>
            <value>
                <fullName>Rejected by Bank</fullName>
            </value>
            <value>
                <fullName>Accepted by Bank/Done</fullName>
            </value>
            <value>
                <fullName>L2 errors by Bank</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>