sas-core/main/default/objects/Settlement__c/fields/Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Date__c</fullName>
    <label>Stop Date</label>
    <type>Date</type>
</CustomField>