sas-core/main/default/objects/Settlement__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who submitted this settlement for approval</inlineHelpText>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>