sas-core/main/default/objects/Settlement__c/fields/Voucher_Email__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Email__c</fullName>
    <label>Voucher Email</label>
    <type>Email</type>
</CustomField>