sas-core/main/default/objects/Settlement__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6721 - Denied boarding involuntary voucher</fullName>
            </value>
            <value>
                <fullName>6721 - Denied boarding voluntary voucher</fullName>
            </value>
            <value>
                <fullName>6722 - Downgrading involuntary voucher</fullName>
            </value>
            <value>
                <fullName>6722 - Downgrading voluntary voucher</fullName>
            </value>
            <value>
                <fullName>6727 - EU261 voucher</fullName>
            </value>
            <value>
                <fullName>6733 - Goodwill voucher</fullName>
            </value>
            <value>
                <fullName>6738 - Care voucher</fullName>
            </value>
            <value>
                <fullName>6741 - Damage baggage voucher</fullName>
            </value>
            <value>
                <fullName>6742 - Delayed baggage voucher</fullName>
            </value>
            <value>
                <fullName>6743 - Pilfered baggage voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>