sas-core/main/default/objects/Settlement__c/recordTypes/Cheque.recordType-meta.xml
<RecordType>
    <fullName>Cheque</fullName>
    <active>true</active>
    <description>Record type for cheque settlements in US</description>
    <label>Cheque</label>
</RecordType>