sas-core/main/default/objects/Settlement__c/recordTypes/EB_points.recordType-meta.xml
<RecordType>
    <fullName>EB_points</fullName>
    <active>true</active>
    <label>EB points</label>
</RecordType>