sas-core/main/default/objects/Settlement__c/recordTypes/Monetary.recordType-meta.xml
<RecordType>
    <fullName>Monetary</fullName>
    <active>true</active>
    <label>Monetary</label>
</RecordType>