sas-core/main/default/objects/Settlement__c/recordTypes/Voucher.recordType-meta.xml
<RecordType>
    <fullName>Voucher</fullName>
    <active>true</active>
    <label>Voucher</label>
</RecordType>