sas-core/main/default/objects/Settlement__c/validationRules/Numbers_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Numbers_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>OR((NOT(REGEX(Payee_First_Name__c ,&quot;^\\s*[A-Za-z\\p{L}\\ -]*$&quot;))), (NOT(REGEX(Payee_Last_Name__c  ,&quot;^\\s*[A-Za-z\\p{L}\\ -]*$&quot;))))</errorConditionFormula>
    <errorMessage>Numbers not allowed in name fields.</errorMessage>
</ValidationRule>