sas-core/main/default/objects/Settlement__c/validationRules/Only_character_allows_in_name_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_character_allows_in_name_fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX( Payee_First_Name__c   ,&quot;^[a-z  A-Z öÖåÅäÄøØ]*$&quot;)),
NOT(REGEX( Payee_Last_Name__c   ,&quot;^[a-z  A-Z öÖåÅäÄøØ]*$&quot;)))</errorConditionFormula>
    <errorMessage>Only characters allowed in name field</errorMessage>
</ValidationRule>