sas-core/main/default/objects/Settlement__c/listViews/Approvers_Settlement.listView-meta.xml
<ListView>
    <fullName>Approvers_Settlement</fullName>
    <filterScope>Queue</filterScope>
    <label>Approvers</label>
    <queue>Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>