sas-core/main/default/objects/Settlement__c/listViews/Control_Settlement.listView-meta.xml
<ListView>
    <fullName>Control_Settlement</fullName>
    <filterScope>Queue</filterScope>
    <label>Control</label>
    <queue>Control</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>